corrections in README.

--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Create the models.py file for your app with all the fields specified.
 
 Run the following command
 
-$ manage.py groundwork
+$ manage.py groundwork appname ModelName1 ModelName2
