Add LICENSE, AUTHORS and Copyright information.

--- a/README
+++ b/README
@@ -7,3 +7,16 @@ Create the models.py file for your app with all the fields specified.
 Run the following command
 
 $ manage.py groundwork appname ModelName1 ModelName2
+
+~~~~~~~
+License
+~~~~~~~
+django-groundwork is License under the terms of BSD License. Please read the
+contents of the LICENSE file in the root of the source repository for the
+terms of the license.
+
+~~~~~~~
+Authors
+~~~~~~~
+The authors and/or contributors of django-groundwork is listed in the AUTHORS
+file in the root of the source repository.
